<resources>
    <string name="app_name">Vuukle Comment</string>
    <string name="comments_item_name">&#160;Name</string>
    <string name="comments_item_email">&#160;Email</string>
    <string name="comments_item_post">Post</string>
    <string name="comments_item_write_a_comment">&#160;Write a comment</string>
    <string name="reply">Reply&#160;</string>
    <string name="invalid_email">Invalid email</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="empty_field" />
    <string name="comment_posted">Comment posted</string>
    <string name="test_name"> </string>
    <string name="test_email"> </string>
    <string name="field_is_empty">Field is empty</string>
    <string name="user_name">user_name</string>
    <string name="user_email">user_email</string>
    <string name="like_and_dislike_id">like_and_dislike_id</string>
    <string name="you_have_already_voted">You have already Voted.</string>
    <string name="report">Report</string>
    <string name="article_id">ARTICLE_ID</string>
    <string name="api_key">API_KEY</string>
    <string name="secret_key">SECRET_KEY</string>
    <string name="time_zone">TIME_ZONE</string>
    <string name="host">HOST</string>
    <string name="url">URL</string>
    <string name="tags">TAGS</string>
    <string name="title">TITLE</string>
    <string name="resource_id">RESOURCE_ID</string>
    <string name="pagination_to_count">paginationToCount</string>
    <string name="downvote">Downvote</string>
    <string name="upvote">Upvote</string>
    <string name="load_more">load more</string>
    <string name="articles_id">artiles_id</string>
    <string name="container_id">container_id</string>
    <string name="is_emote_visible">is_emote_visible</string>
    <string name="what_is_your_reaction">What is your reaction?</string>
    <string name="thank_you_for_voting">Thank you for voting!</string>
    <string name="emote_number">emote_number</string>
    <string name="is_swipe_to_refresh_enable">is_swipe_to_refresh_enable</string>
    <string name="show">Show</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="one_comment">1 comment</string>
    <string name="comments"> comments</string>
    <string name="log_out">Logout</string>
    <string name="vuukle">vuukle</string>
    <string name="user_is_logedin">user_is_logedin</string>
    <string name="madhukar_nikam">Madhukar Nikam</string>
    <string name="about_4_hours_ago">about 4 hours ago</string>
    <string name="same_goons_with_a_different_party_become_acceptable">same goons with a different party become acceptable</string>
    <string name="addArticleWebView">addArticleWebView</string>
    <string name="addAdsBanner">add_ads_banner</string>
    <string name="addTopArticle">add_top_article</string>
    <string name="welcome">welcome_user</string>
    <string name="welcome_user">"Welcome, "</string>
</resources>
