<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reply_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/reply_layout_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/total_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/leave_a_comment"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/post_button_backggound"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>


    <EditText
        android:id="@+id/header_write_a_comment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text_background"
        android:gravity="top|start"
        android:hint="@string/comments_item_write_a_comment"
        android:lines="6"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColorHint="@color/text_hint"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/header_user_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/comments_item_name"
        android:inputType="textPersonName"
        android:maxLength="29"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="@color/text_hint"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome"/>

    <EditText
        android:id="@+id/header_user_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/comments_item_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="@color/text_hint"
        android:textSize="12sp" />


    <Button
        android:id="@+id/header_post_comment"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/post_button_backggound"
        android:text="@string/comments_item_post"
        android:textColor="@android:color/white" />


</LinearLayout>