<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignLeft="@id/picture"
            android:layout_alignStart="@id/picture"
            android:layout_alignTop="@id/picture" />

        <TextView
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/picture_bacground"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/user_image"
            android:layout_alignLeft="@+id/user_image"
            android:layout_alignRight="@+id/user_image"
            android:layout_alignStart="@+id/user_image"
            android:layout_below="@+id/user_image"
            android:gravity="center" />

        <ImageView
            android:id="@+id/report_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/user_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_more_vert_black_24dp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/picture"
            android:layout_toRightOf="@id/picture"
            android:text="@string/madhukar_nikam"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user_name"
            android:layout_alignStart="@+id/user_name"
            android:layout_below="@+id/user_name"
            android:layout_marginTop="5dp"
            android:text="@string/about_4_hours_ago"
            android:textSize="10sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/timestamp"
            android:layout_alignStart="@id/timestamp"
            android:layout_alignTop="@id/timestamp"
            android:layout_below="@id/timestamp"
            android:layout_marginTop="20dp"
            android:text="@string/same_goons_with_a_different_party_become_acceptable"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_alignStart="@+id/user_image"
            android:layout_below="@id/message"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/thumb_up"
                android:paddingTop="5dp"
                />


            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@drawable/up_vote_background"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:paddingBottom="5dp"
                android:src="@drawable/thumb_down"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/downvote" />

            <TextView
                android:id="@+id/dislike_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@drawable/down_vote_background"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/comment_facebook_share"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:src="@drawable/facebook_share_button"
                />

            <ImageView
                android:id="@+id/comment_twitter_share"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/twitter_share_button"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                />


            <TextView
                android:id="@+id/reply_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="4dp"
                android:paddingRight="8dp"
                android:layout_alignWithParentIfMissing="true"
                android:text="@string/reply" />

            <LinearLayout
                android:id="@+id/show_replyes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="2dp"
                android:paddingBottom="5dp"
                android:paddingRight="4dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/show_replyes_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_toLeftOf="@id/reply_count"
                    android:text="@string/show"/>

                <TextView
                    android:id="@+id/reply_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/up_vote_background"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/reply_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user_rating"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/user_rating"
            android:layout_below="@id/info_layout"
            android:layout_marginBottom="5dp"
            android:background="@drawable/reply_layout_background"
            android:visibility="gone">

            <EditText
                android:id="@+id/reply_message"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top|left"
                android:hint="@string/comments_item_write_a_comment"
                android:lines="6"
                android:padding="5dp"
                android:scrollbars="vertical"
                android:textColorHint="#c4bbb5"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/reply_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/reply_message"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/comments_item_name"
                android:inputType="textPersonName"
                android:maxLength="29"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColorHint="#c4bbb5"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/reply_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/reply_name"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/comments_item_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColorHint="#c4bbb5"
                android:textSize="12sp" />


            <Button
                android:id="@+id/reply_post"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/reply_email"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/post_button_backggound"
                android:text="@string/comments_item_post"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>